--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h2>Employee Management System</h2>
 
   <button class="btn btn-success my-2" data-toggle="modal" data-target="#employeeModal">Add</button>
-  <input type="text" id="search" class="search mb-2" >
+  <input type="text" id="searchInput" oninput="handleInput()" class="search-input mb-2" >
   <button id="save-button" class="btn btn-primary mb-2" onclick="saveDetails()">Save</button>
 
   <div class="modal fade" id="employeeModal" tabindex="-1">
@@ -65,6 +65,8 @@
       </tr>
     </thead>
     <tbody id="tableVal"></tbody>
+    <tbody id="stable"></tbody>
+
   </table>
 
   <div class="d-flex justify-content-between align-items-center">
