--- a/index.html
+++ b/index.html
@@ -9,67 +9,38 @@
 <div class="container mt-4">
   <h2>Employee Management System</h2>
 
-  <button class="btn btn-success my-2" data-toggle="modal" data-target="#employeeModal">Add</button>
   <input type="text" id="searchInput" oninput="handleInput()" class="search-input mb-2" >
-  <button id="save-button" class="btn btn-primary mb-2" onclick="saveDetails()">Save</button>
-
-  <div class="modal fade" id="employeeModal" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Employee Details</h5>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-      </div>
-      <div class="modal-body">
-        <input type="hidden" id="editIndex" value="">
-        <div class="form-group">
-          <label>Name</label>
-          <input type="text" id="name" class="form-control">
-        </div>
-        <div class="form-group">
-          <label>Email</label>
-          <input type="email" id="email" class="form-control">
-        </div>
-        <div class="form-group">
-          <label>PhoneNumber</label>
-          <input type="number" id="phoneNumber" class="form-control">
-        </div>
-        <div class="form-group">
-          <label>Department</label>
-          <input type="text" id="department" class="form-control">
-        </div>
-        <div class="form-group">
-          <label>Role</label>
-          <input type="text" id="role" class="form-control">
-        </div>
-        <div id="Error" class="text-danger"></div>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button class="btn btn-primary" onclick="modalOk()">Ok</button>
-      </div>
-    </div>
-  </div>
-</div>
-
+  
   <table class="table table-bordered">
     <thead>
       <tr>
+        <th>User ID</th>
         <th>Name</th>
         <th>Email</th>
-        <th>Phone</th>
-        <th>Department</th>
-        <th>Role</th>
-        <th>Joining Date</th>
-        <th>Actions</th>
+        <th>Status</th>
+        <th>Contact</th>
+        
       </tr>
     </thead>
     <tbody id="tableVal"></tbody>
     <tbody id="stable"></tbody>
 
   </table>
+  <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle mb-3"  type="button" data-toggle="dropdown" aria-expanded="false">
+    Pages
+  </button>
+  <div class="dropdown-menu">
+    <span class="dropdown-item item1" id="dropdown" onclick="button(5)">5</span>
+    <span class="dropdown-item item1" id="dropdown" onclick="button(10)">10</span>
+    <span class="dropdown-item item1" id="dropdown" onclick="button(15)">15</span>
 
-  <div class="d-flex justify-content-between align-items-center">
+    <!-- <a class="dropdown-item item2" href="#">7</a>
+    <a class="dropdown-item item3" href="#">10</a> -->
+  </div>
+</div>
+
+  <div class="d-flex justify-content-between align-items-center" id="pagination">
     <button class="btn btn-primary" id="prev" onclick="prevPage()">Previous</button>
     <span id="pageNum"></span>
     <button class="btn btn-primary" id="next" onclick="nextPage()">Next</button>
